; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/vc/extr_mmal_vc_api.c_mmal_vc_host_log.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/vc/extr_mmal_vc_api.c_mmal_vc_host_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_4__ = type { i32 }

@MMAL_EINVAL = common dso_local global i32 0, align 4
@MMAL_WORKER_HOST_LOG = common dso_local global i32 0, align 4
@MMAL_FALSE = common dso_local global i32 0, align 4
@MMAL_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mmal_vc_host_log(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__, align 4
  %5 = alloca %struct.TYPE_4__, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %8 = load i32, i32* @MMAL_EINVAL, align 4
  store i32 %8, i32* %3, align 4
  %9 = load i8*, i8** %2, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %36

11:                                               ; preds = %1
  store i64 4, i64* %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load i8*, i8** %2, align 8
  %15 = call i64 @vcos_safe_strcpy(i32 %13, i8* %14, i32 4, i32 0)
  store i64 %15, i64* %7, align 8
  %16 = call i32 (...) @mmal_vc_get_client()
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %18 = load i64, i64* %7, align 8
  %19 = add i64 %18, 1
  %20 = call i64 @vcos_min(i32 4, i64 %19)
  %21 = add i64 4, %20
  %22 = load i32, i32* @MMAL_WORKER_HOST_LOG, align 4
  %23 = load i32, i32* @MMAL_FALSE, align 4
  %24 = call i32 @mmal_vc_sendwait_message(i32 %16, i32* %17, i64 %21, i32 %22, %struct.TYPE_4__* %5, i64* %6, i32 %23)
  store i32 %24, i32* %3, align 4
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* @MMAL_SUCCESS, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %35

28:                                               ; preds = %11
  %29 = load i64, i64* %6, align 8
  %30 = icmp eq i64 %29, 4
  %31 = zext i1 %30 to i32
  %32 = call i32 @vcos_assert(i32 %31)
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %28, %11
  br label %36

36:                                               ; preds = %35, %1
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i64 @vcos_safe_strcpy(i32, i8*, i32, i32) #1

declare dso_local i32 @mmal_vc_sendwait_message(i32, i32*, i64, i32, %struct.TYPE_4__*, i64*, i32) #1

declare dso_local i32 @mmal_vc_get_client(...) #1

declare dso_local i64 @vcos_min(i32, i64) #1

declare dso_local i32 @vcos_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
